fix: Increase contrast ratio between navigation item and NavBar (resolves FWK-399)

--- a/src/sass/overrides/Bootstrap/_navbar.scss
+++ b/src/sass/overrides/Bootstrap/_navbar.scss
@@ -101,7 +101,7 @@
     // as direct children to <Navbar>.
     // @todo I realize this :not logic is awful, and should be improved.
     > a:not(.navbar-brand) {
-        color: rgba(0,0,0,0.5);
+        color: #717070;
         padding: .5rem;
         margin: 0 0.25rem;
         text-shadow: none;
